# bbbluff

./: .gitignore  READ.me  hardhat.config.js  package-lock.json  package.json
circuits/: Cargo.toml  package.json
circuits/src/: card.rs  lib.rs  main.rs  qty.rs  rank.rs  suite.rs  wasm.rs
contracts/: CardDeck.sol
scripts/: CardDeck.js
