[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "card"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
ff = "0.13"
rand_core = "0.6.4"